--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "yt-tools",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "^14"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,16 +12,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ffmpeg/core": "^0.11.0",
+    "@ffmpeg/ffmpeg": "^0.11.5",
+    "chrome-aws-lambda": "^10.1.0",
     "next": "12.3.1",
+    "nextjs-cors": "^2.1.1",
+    "puppeteer-core": "10.4.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-colorful": "^5.6.1",
+    "react-dom": "18.2.0",
+    "ytdl-core": "^4.11.2"
   },
   "devDependencies": {
     "@types/node": "18.7.23",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.12",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
+    "postcss": "^8.4.17",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.8.4"
   }
 }
