--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
   "name": "yt-tools",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "node": "^14"
-  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -14,10 +11,9 @@
   "dependencies": {
     "@ffmpeg/core": "^0.11.0",
     "@ffmpeg/ffmpeg": "^0.11.5",
-    "chrome-aws-lambda": "^10.1.0",
+    "@vercel/og": "^0.0.19",
     "next": "12.3.1",
     "nextjs-cors": "^2.1.1",
-    "puppeteer-core": "10.4.0",
     "react": "18.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "18.2.0",
